# cgelauncher

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
openspec/: apis.yaml  datamodels.yaml  design.md  mockup.html  proposal.md  tasks.md  testing.md
openspec/changes/archive/: 001-ssh-config-project-flag.md
openspec/schemas/rks-sdd/: README.md  schema.yaml
openspec/specs/auto-stop-agent/: apis.yaml  datamodels.yaml  design.md  proposal.md  spec.md  tasks.md  testing.md
openspec/specs/configuration/: spec.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  monitor.rs  state.rs
src-tauri/src/commands/: auth.rs  config.rs  disk.rs  log.rs  mod.rs  pricing.rs  ssh.rs  vm.rs
src-tauri/src/gcloud/: auth.rs  auto_stop.rs  auto_stop.sh  auto_stop_startup.sh  disk.rs  executor.rs  instance.rs  mod.rs  pricing.rs  pricing_fetch.rs  service_account.rs  ssh.rs
src-tauri/src/models/: config.rs  disk.rs  instance.rs  machine.rs  mod.rs  pricing.rs
src-tauri/src/oauth/: callback_server.rs  flow.rs  mod.rs
src/components/: ConfigPanel.tsx  CreateDiskPanel.tsx  DiskItem.tsx  DiskList.tsx  Layout.tsx  MachineConfig.tsx  PricingDisplay.tsx  ResourceSummary.tsx  SettingsPanel.tsx  StatusBar.tsx  VmControls.tsx  VmStatusBadge.tsx
src/hooks/: useConfig.ts  useDisks.ts  usePricing.ts  useVmStatus.ts
src/lib/: tauri.ts  types.ts
tests/auto-stop/: auto_stop_check.bats  auto_stop_startup.bats
(+9 files in other folders)
