[package]
name = "cgelauncher"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.22"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "cgelauncher_lib"
crate-type = ["lib", "cdylib", "staticlib"]
